# invoicer

./: .gitignore  Cargo.toml  LICENSE  README.md  invoicer.toml  test.tex
examples/: CustomerB.toml  ExampleInvoicee.toml  ExampleRecipient.toml  ExampleWorklog.csv  ExampleWorklogWithTags.csv
locales/: de.toml  en.toml
src/: generate_tex.rs  helpers.rs  invoice.rs  invoicer.rs  lib.rs  locale.rs  main.rs  worklog.rs
templates/: common.tex  english.tex  german.tex  invoice.tex  timesheet.tex
