[package]
name = "invoicer"
version = "0.1.0"
edition = "2021"
authors = ["Michael Winkelmann (michael@winkelmann.site)"]
keywords = ["work","time","accounting","shell"]


[dependencies]
clap = { version = "4.1", features = ["derive","cargo"] }
toml = "0.8.6"
csv = "1.3.0"
chrono = { version="^0.4.20", features = ["serde"] }
serde = { version="1.0.190", features = ["derive","std"] }
struct_iterable = "0.1.1"
lazy_static = "1.4.0"
common_macros = "0.1.1"
home = "0.5.5"
sha2 = { version = "0.10.8", default-features = false }
bimap = "0.6.3"
